Update copy and line spacing for features.

--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -143,6 +143,9 @@ p
       background: #fff
       height: 260px
 
+      p
+        line-height: 1.6em
+
   li.read_bible
     background: image-url("read_bible_icon.png") no-repeat center 0px
 
