--- a/app/views/pages/bdc_home.html.haml
+++ b/app/views/pages/bdc_home.html.haml
@@ -53,7 +53,9 @@
           %h2 Take the Bible with you.
           %p
             %span.narrow <a href="mobile">Download</a> the Bible App for free on any mobile device. When you use the mobile
-          %p app, your notes, bookmarks, highlights, plans, and more will be <strong>synced with Bible.com</strong>. You’ll have access to it all, no matter if you’re reading the Bible on your phone, tablet, or computer.
+          %p app, your notes, bookmarks, highlights, plans, and more will be automatically synced across all of your devices.
+
+
 
     .explore_cta
       %h1 Get started with your free account.
