Changing link location to /download.

--- a/app/views/pages/bdc_home.html.haml
+++ b/app/views/pages/bdc_home.html.haml
@@ -52,7 +52,7 @@
         %div.pod_content
           %h2 Take the Bible with you.
           %p
-            %span.narrow <a href="mobile">Download</a> the Bible App for free on any mobile device. When you use the mobile
+            %span.narrow <a href="/download">Download</a> the Bible App for free on any mobile device. When you use the mobile
           %p app, your notes, bookmarks, highlights, plans, and more will be automatically synced across all of your devices.
 
 
