Remove extra period.

--- a/app/views/pages/bdc_home.html.haml
+++ b/app/views/pages/bdc_home.html.haml
@@ -34,7 +34,7 @@
         %div.pod_content
           %h2 Read the Bible.
           %p
-            %span.narrow Take your choice from <strong>hundreds of Bible versions and languages.</strong>. Compare two
+            %span.narrow Take your choice from <strong>hundreds of Bible versions and languages</strong>. Compare two
           %p versions side by side. You can even choose your font and display size. Make your online Bible experience just the way you like it.
       %li.study_bible
         %div.pod_content
