all /download links are now relative.

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -94,7 +94,7 @@
           %p
             Installs around the world
       %div
-        = link_to('Download the Bible App', 'http://youversion.com/download')
+        = link_to('Download the Bible App', '/download')
 
 - content_for :javascripts do
   :javascript
