--- a/app/assets/stylesheets/_reference_tokens.sass
+++ b/app/assets/stylesheets/_reference_tokens.sass
@@ -1,14 +1,14 @@
-.modal_reference_tokens ul 
+.modal_reference_tokens ul
 	margin-left: 10px
 
 .modal_reference_tokens ul li
 	float: left
 	list-style: none
-	margin: 
+	margin:
 		right: 10px
 		left: 0px
 	padding: 0px
-	a 
+	a
 		display: block
 		padding: 2px 29px 2px 10px
 		font-weight: bold
@@ -38,14 +38,15 @@
 .reference_tokens > li
 	float: left
 	list-style: none
-	margin: 
+	line-height: inherit
+	margin:
 		right: 10px
 		left: 0px
 		top: 6px
 		bottom: 6px
 	padding: 0px
 	border: none !important
-	a 
+	a
 		display: block
 		padding: 2px 29px 2px 10px
 		font-weight: bold
@@ -79,7 +80,7 @@
 
 #add_reference_token input
 	background: #767474 !important
-	display: none 
+	display: none
 #add_reference_token_helper
 	position: absolute
 	z-index: 4
