JS to handle only 1 menu

--- a/app/views/references/_reader_header.html.haml
+++ b/app/views/references/_reader_header.html.haml
@@ -27,7 +27,7 @@
           %input.verses_selected_input{name:'verses', type: 'hidden', value: ''}
     %ul.float_right
       %li.show_in_parallel_mode
-        %a.dynamic_menu_trigger.drop_down_select{href:"#menu_alt_version", id:"menu_alt_version_trigger", title: t("ref.choose second version")}
+        %a.dynamic_menu_trigger.drop_down_select{href:"#menu_version", id:"menu_alt_version_trigger", title: t("ref.choose second version")}
           %b
             = @alt_version.human
           %span
