hand for verse hover

--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -274,6 +274,9 @@ footer .publisher .courtesy + .blurb
   border-bottom: 1px
   border-bottom-style: dotted
 
+.verse:hover
+  cursor: pointer
+
 .verse + .verse
   margin-left: 3px
 
@@ -301,6 +304,9 @@ article[data-setting-size="user_setting_size_medium"] .verse > .label
 
 article[data-setting-size="user_setting_size_large"] .verse > .label
   margin-top: 1.2em
+
+.note
+  cursor: default
 
 .note .body
   display: none
