Correct /download url.

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -89,7 +89,7 @@
           %p &nbsp;
           %p= t(".world installs")
       %div
-        = link_to(t(".download action"), '/download')
+        = link_to(t(".download action"), 'http://youversion.com/download')
 
 - content_for :javascripts do
   :javascript
