--- a/app/assets/stylesheets/_dynamic_menus.sass
+++ b/app/assets/stylesheets/_dynamic_menus.sass
@@ -80,6 +80,11 @@
 .dynamic_menu .scroll
   font-size: 13px
 
+.dynamic_menu .loading
+  text-align: center
+  color: #cbc9cf
+  margin-top: 20px
+
 .dynamic_menu table,
 .dynamic_menu ul,
 .dynamic_menu ol
