--- a/app/assets/stylesheets/_dynamic_menus.sass
+++ b/app/assets/stylesheets/_dynamic_menus.sass
@@ -83,7 +83,7 @@
 .dynamic_menu .loading
   text-align: center
   color: #cbc9cf
-  margin-top: 20px
+  margin: 20px 10px
 
 .dynamic_menu table,
 .dynamic_menu ul,
