fixed bugs with alt_version menu, added current locale version links in server respponse rendering

--- a/app/cells/version_selector/display.html.haml
+++ b/app/cells/version_selector/display.html.haml
@@ -14,5 +14,6 @@
           %tr.cat
             %th{:colspan => '2'}= t('recent versions')
           = render partial: 'items', locals: {versions: @recent_versions}
+        = render_cell :version_selector, :all_versions, version: @version, site: @site
       .loading{'data-error-text' => t('versions.load error')}
         = t('versions.loading')
