--- a/app/cells/version_selector/all_versions.html.haml
+++ b/app/cells/version_selector/all_versions.html.haml
@@ -1,7 +1,9 @@
 %tr.cat
   %th{:colspan => '2'}= @version.language.human
 = render partial: 'items', locals: {versions: @this_language}
-- @all_languages.each do |lang, versions|
-  %tr.cat
-    %th{:colspan => '2'}= @languages[lang]
-  = render partial: 'items', locals: {versions: versions}
+/ # rest of versions are now appended via AJAX when user
+/ # clicks the menu trigger
+/ - @all_languages.each do |lang, versions|
+/   %tr.cat
+/     %th{:colspan => '2'}= @languages[lang]
+/   = render partial: 'items', locals: {versions: versions}
