min width on abbreviation cells in version menu

--- a/app/assets/stylesheets/_dynamic_menus.sass
+++ b/app/assets/stylesheets/_dynamic_menus.sass
@@ -350,6 +350,10 @@
 .dynamic_menu.version_select
   width: 415px
 
+.dynamic_menu.version_select th a
+  min-width: 7em
+
+
 #menu_version td.audio a div
   background:
     image: image-url("icon_listen.png")
