initial markup for new verse actions menu

--- a/app/assets/stylesheets/_dynamic_menus.sass
+++ b/app/assets/stylesheets/_dynamic_menus.sass
@@ -334,18 +334,25 @@
 .dynamic_menu #new_note_modal:hover
   background: image-url("icon_open_modal.png") no-repeat 95% center #2e2e2e
 
-#menu_bookmark header ul.reference_tokens
-  background: none
+// #menu_bookmark header ul.reference_tokens
+//   background: none
 
-#menu_bookmark header ul.reference_tokens > a
-  border: none !important
+// #menu_bookmark header ul.reference_tokens > a
+//   border: none !important
 
-#menu_bookmark header span
-  font-weight: bold
-  margin: 0 0 5px 0
-  display: block
-#menu_bookmark header .close
-  top: 15px
+// #menu_bookmark header span
+//   font-weight: bold
+//   margin: 0 0 5px 0
+//   display: block
+// #menu_bookmark header .close
+//   top: 15px
+
+#menu_verse_actions,
+#menu_verse_actions dd
+  display: none
+
+#menu_verse_actions dt
+  cursor: pointer
 
 .dynamic_menu.version_select
   width: 415px
