--- a/app/cells/version_selector/all_versions.html.haml
+++ b/app/cells/version_selector/all_versions.html.haml
@@ -2,5 +2,5 @@
   %th{:colspan => '2'}= @version.language.human
 = render partial: 'items', locals: {versions: @this_language}
 -#
-  the rest of versions are appended via AJAX when user
+  Note: the rest of versions are appended via AJAX when user
   opens the menu, to not clutter the DOM on initial load
