--- a/app/views/references/_reader_header.html.haml
+++ b/app/views/references/_reader_header.html.haml
@@ -13,18 +13,6 @@
             = @version.human
           %span
             =t("ref.choose version")
-      %li#li_selected_verses.separator.hide
-        %a#clear_selected_verses.button{:href => '#', :title => ('ref.clear verses')}
-          %span.icon_x
-            = t('ref.clear verses')
-        %a.dynamic_menu_trigger.button{id:"menu_selected_trigger", href:"#menu_bookmark", title:t("ref.share")}
-          %b.icon_share
-            =t("ref.selected")
-            %sup#verses_selected_count
-              0
-        -# Submit via GET to share verses...
-        %form{action: '', id: 'verses_selected_form', method: 'get'}
-          %input.verses_selected_input{name:'verses', type: 'hidden', value: ''}
     %ul.float_right
       %li.show_in_parallel_mode
         %a.dynamic_menu_trigger.drop_down_select{href:"#menu_version", id:"menu_alt_version_trigger", title: t("ref.choose second version")}
@@ -48,3 +36,4 @@
         %a#button_read_parallel.button{:href => '#', :title => t("ref.parallel")}
           %span.icon_parallel
             =t("ref.parallel")
+  = render partial: 'shared/menu_verse_actions'
