--- a/app/views/shared/_widget_parallel_notes.html.haml
+++ b/app/views/shared/_widget_parallel_notes.html.haml
@@ -6,41 +6,4 @@
         = t('notes.pop out')
   %section
     %ul.reference_tokens
-    = form_for @note do |f|
-      - if @note.errors.any?
-        .form_errors
-          =t("notes.creation form errors")
-          %ul
-            - @note.errors.each do |e|
-              %li= e
-      %div
-        = f.label :title, t("notes.title field")
-        = f.text_field :title
-      %div{style: "margin-bottom: 4px;"}
-        = f.label :content, t("notes.content field")
-        = f.text_area :content
-      - # %p
-      - #   = f.label :version, t("notes.version field")
-      - #   = f.select :version, options_for_select(versions_dropdown, @note.version), {:prompt => t("notes.select from list")}
-      - # %p
-      - #   = f.label :reference, t("notes.reference field")
-      - #   = f.text_field :reference
-      %div
-        = f.label :user_status, t("notes.status field")
-        = f.select :user_status, options_for_select(object_status, @note.user_status)
-      - # %div{:class => "color_picker_list"}
-      - #   %a{:class => "color_picker", :href =>"#"}
-      - #   %a{:class => "color_picker_holder", :href =>"#"}
-      - #   %a{:class => "color_picker_clear", :href =>"#"}
-      - #     <span class='selected'></span>
-      - #   %a{:class => "color", :href => "#", :style => "background-color:#f3a9a9"}
-      - #   %a{:class => "color", :href => "#", :style => "background-color:#f6f0b4"}
-      - #   %a{:class => "color", :href => "#", :style => "background-color:#a8ed9d"}
-      - #   %a{:class => "color", :href => "#", :style => "background-color:#f3a9a9"}
-      = f.hidden_field :references, class: "verses_selected_input"
-      = f.hidden_field :version_id
-      %div.parallel_notes_submit.clearfix
-        %button.action_button_green.float_right
-          = t('notes.save')
-        %a.cancel.warning.float_left
-          = t('notes.cancel')
+    = render partial: 'notes/widget_form'
