--- a/app/assets/stylesheets/_reference_tokens.sass
+++ b/app/assets/stylesheets/_reference_tokens.sass
@@ -38,7 +38,7 @@
 .reference_tokens > li
 	float: left
 	list-style: none
-	line-height: inherit
+	line-height: 19px
 	margin:
 		right: 10px
 		left: 0px
