--- a/app/assets/stylesheets/_dynamic_menus.sass
+++ b/app/assets/stylesheets/_dynamic_menus.sass
@@ -349,7 +349,7 @@
 #menu_verse_actions dd
   display: none
   position: absolute
-  top: 102px
+  top: 81px
 
 #menu_verse_actions dt
   cursor: pointer
@@ -394,8 +394,11 @@
   background-position-y: -68px
 
 #menu_verse_actions dl .pane
-  width: 100%
+  width: 578px
   background-color: #fff
+  border: 1px solid #cbc9cf
+  border-top: none
+  padding: 10px
 
 .dynamic_menu.version_select
   width: 415px
