--- a/app/assets/stylesheets/_ui_elements.sass
+++ b/app/assets/stylesheets/_ui_elements.sass
@@ -231,18 +231,19 @@
   // Color Picker
   //
 
-.color_picker_list 
+.color_picker_list
   float: left
   width: 100%
 
-.color_picker_list a 
+.color_picker_list a
   float: left
   margin:
     right: 7px
 
-.color_picker   
+.color_picker
   height: 23px
   width: 23px
+  margin-top: 3px
   display: block
   border-radius: 4px
   box-shadow: inset 0px 1px 0px #ddd
@@ -264,7 +265,7 @@
   width: 23px
   display: block
 
-.color .selected, .color_picker_clear .selected 
+.color .selected, .color_picker_clear .selected
   background: image-url("menu_color_selected.png") no-repeat
   position: relative
   width: 23px
@@ -272,13 +273,13 @@
   top: 12px
   left: 12px
   display: block
-  
+
 // Color Picker in Highlight Acc.
-.accordion dd .color_picker_list 
+.accordion dd .color_picker_list
   margin: 0 0 15px 0
 
 // UX has been changed for right now, this isn't needed
-// .color .selected:hover 
+// .color .selected:hover
 //  background-position: 0px -24px
 
 .remove_color
@@ -356,7 +357,7 @@
     background:
       position: center -47px !important
 
-dd .icon_settings 
+dd .icon_settings
   background-repeat: no-repeat
   background-position: center 7px !important
   text-indent: -30000px
@@ -379,7 +380,7 @@ dd .icon_settings
 // ` Calendar
 //
 
-.cal_month 
+.cal_month
   float: left
   margin-right: 8px
   font-family: helvetica
@@ -389,7 +390,7 @@ dd .icon_settings
 .cal_month tbody
   width: 100%
 
-.cal_month caption 
+.cal_month caption
   padding: 5px 0px
   font-weight: bold
   background: #e53535 /* Old browsers */
@@ -408,18 +409,18 @@ dd .icon_settings
   box-shadow: 0px 1px 0px #f59595 inset
   text-align: center
 
-.cal_month thead tr 
+.cal_month thead tr
   background: #f8f8f8
   font-size: 13px
   color: #444
 
-.cal_month thead tr th 
+.cal_month thead tr th
   border-collapse: collapse
   border: 0
   padding: 5px 8px
   text-align: center
 
-.cal_month td 
+.cal_month td
   text-align: center
   border: 1px #d5d0d0 solid
   border-collapse: collapse
@@ -436,38 +437,38 @@ dd .icon_settings
   padding: 4px 7px 5px 7px
   display: block
 
-.cal_month tr 
+.cal_month tr
   border-collapse: collapse
 
-.cal_month td.disabled 
+.cal_month td.disabled
   background: #e9e9e9
   box-shadow: 0px 1px 0px #f5f5f5 inset
 
-.cal_month td.today 
+.cal_month td.today
   background: #fff
   font-weight: bold
 
-.cal_month td.today a 
+.cal_month td.today a
   color: #000 !important
 
-.cal_month td.read 
+.cal_month td.read
   font-weight: bold
   text-decoration: line-through
 
-.cal_month td.read a 
+.cal_month td.read a
   color: #888
   background: none
 
 .cal_month td .inactive-day
   color: #aaa
   background-image: none
-  padding: 4px 0 5px 0px 
+  padding: 4px 0 5px 0px
   display: block
   height: 24px
 
 .cal_month .active-day a
   background: image-url("cal_bullet.png") center 21px no-repeat
 
-.cal_month .hidden 
+.cal_month .hidden
   height: 35px
   padding: 0
