--- a/app/assets/stylesheets/_dynamic_menus.sass
+++ b/app/assets/stylesheets/_dynamic_menus.sass
@@ -276,12 +276,6 @@
   line-height: 1
   padding: 10px 15px !important
 
-.dynamic_menu .accordion dt
-  cursor: pointer
-
-.dynamic_menu .accordion dt:hover
-  background: #2f2f2f
-
 .dynamic_menu header,
 .dynamic_menu dt
   position: relative
@@ -334,7 +328,7 @@
 #menu_verse_actions
   display: none
   position: relative
-  background-color: #2f2f2f
+  background-color: #323232
 
 #menu_verse_actions .references
   padding: 0px 5px
@@ -343,7 +337,7 @@
   margin: 0
 
 #menu_verse_actions dl
-  background-color: #2f2f2f
+  background-color: #323232
   border-top: 1px solid #000
 
 #menu_verse_actions dd
@@ -356,42 +350,56 @@
   float: left
   width: 98px
   height: 44px
-  background-color: #2f2f2f
+  background-color: #323232
   border-left: 1px solid #444
   border-top: 1px solid #444
   border-right: 1px solid #000
   background:
     image: image-url("verse_action_sprite.png")
     repeat: no-repeat
-  text-indent: -1000px
-  overflow: hidden
+  text-indent: -2000px
 
 #menu_verse_actions dt.highlight
-  background-position: 36px 10px
+  background-position: 37px 10px
 
 #menu_verse_actions dt.comment
-  background-position: -48px 10px
+  background-position: -47px 10px
 
 #menu_verse_actions dt.comment
-  background-position: -48px 10px
+  background-position: -47px 10px
 
 #menu_verse_actions dt.bookmark
-  background-position: -132px 10px
+  background-position: -131px 10px
 
 #menu_verse_actions dt.note
-  background-position: -216px 10px
+  background-position: -215px 10px
 
 #menu_verse_actions dt.share
-  background-position: -300px 10px
+  background-position: -299px 10px
 
 #menu_verse_actions dt.clear-selected
-  background-position: -384px 10px
+  background-position: -383px 10px
 
 #menu_verse_actions dt.link
-  background-position: -468px 10px
+  background-position: -467px 10px
 
-#menu_verse_actions dt.active
-  background-position-y: -68px
+#menu_verse_actions dt.active,
+#menu_verse_actions dt:hover
+  background-position-y: -70px
+
+#menu_verse_actions dt .arrow
+  display:none
+
+#menu_verse_actions dt.active .arrow
+  height: 8px
+  width: 16px
+  background:
+    image: image-url('active_arrow_down.png')
+    repeat: no-repeat
+  position: relative
+  top: 16px
+  left: 41px
+  z-index: 1
 
 #menu_verse_actions dl .pane
   width: 578px
