--- a/app/views/notes/_widget_form.html.haml
+++ b/app/views/notes/_widget_form.html.haml
@@ -9,7 +9,7 @@
     = f.label :title, t("notes.title field")
     = f.text_field :title
   %div{style: "margin-bottom: 4px;"}
-    = f.label :content, t("notes.content field")
+    -#= f.label :content, t("notes.content field")
     = f.text_area :content
   %div
     = f.label :user_status, t("notes.status field")
