--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -1,3 +1,8 @@
+- title = @title
+- title << " | " if @title
+- title << (@subtitle || @site.title).to_s
+%title= title
+
 = cache "head_meta_#{@site}", expires_in: a_short_time do
   %meta{:charset => 'utf-8'}
   %meta{'http-equiv' => 'x-ua-compatible', :content => 'ie=edge, chrome=1'}
@@ -17,16 +22,11 @@
   /[if IE 7]
     = stylesheet_link_tag "ie7"
 
+/[if IE]
+  %script{:src => "//html5shiv.googlecode.com/svn/trunk/html5.js"}
+
 - if content_for? :additional_meta
   = yield :additional_meta
 
 - if content_for? :stylesheets
   = yield :stylesheets
-
-/[if IE]
-  %script{:src => "//html5shiv.googlecode.com/svn/trunk/html5.js"}
-
-%title
-  = @title
-  = "|" if @title
-  = @subtitle || @site.title
