Styled and tweaked the reader verse taskbar sections

--- a/app/assets/stylesheets/_dynamic_menus.sass
+++ b/app/assets/stylesheets/_dynamic_menus.sass
@@ -333,6 +333,12 @@
 #menu_verse_actions .references
   padding: 0px 5px
 
+#menu_verse_actions .references .reference_tokens > li
+  margin-top: 7px
+
+  a
+    border-radius: 4px
+
 #menu_verse_actions .references ul
   margin: 0
 
@@ -403,11 +409,11 @@
   z-index: 1
 
 #menu_verse_actions dl .pane
-  width: 578px
+  width: 558px
   background-color: #fff
   border: 1px solid #cbc9cf
   border-top: none
-  padding: 10px
+  padding: 10px 20px
 
 .dynamic_menu.version_select
   width: 415px
@@ -421,3 +427,52 @@
     image: image-url("icon_listen.png")
     repeat: no-repeat
     position: 100% -46px
+
+#menu_verse_actions #bookmark-pane .pane
+  padding-bottom: 0
+
+#menu_verse_actions #bookmark-pane .pane input[type="text"]
+  width: 300px
+
+#menu_verse_actions #share-pane .pane
+  padding: 20px 20px 0
+
+#menu_verse_actions #share-pane .pane .share_action
+  clear: both
+  margin-top: 8px
+
+#menu_verse_actions #share-pane .pane .share_services
+  overflow: hidden
+  margin-top: 8px
+
+#menu_verse_actions #share-pane .pane .share_action
+  float: none
+  margin-bottom: 20px
+
+#menu_verse_actions #share-pane .pane .share_services span
+  display: block
+  float: left
+  margin-left: 5px
+  border-radius: 4px
+  border: 1px solid #e1e1e1
+  padding: 4px 6px 0 1px
+
+#menu_verse_actions #share-pane .pane .share_services span:first-child
+  margin-left: 0
+
+#menu_verse_actions #link-pane .pane
+  padding-top: 20px
+
+#menu_verse_actions #note-pane .pane
+  padding: 20px
+
+#menu_verse_actions #note-pane .pane label
+  display: block
+
+#menu_verse_actions #note-pane .pane input#note_title
+  width: 300px
+  margin-bottom: 20px
+
+#menu_verse_actions #note-pane .pane #note_content-wysiwyg-iframe
+  width: 500px !important
+  height: 150px !important
