--- a/app/views/shared/_menu_verse_actions.html.haml
+++ b/app/views/shared/_menu_verse_actions.html.haml
@@ -54,7 +54,7 @@
             %input{type: "hidden", name: "bookmark[version_id]", value: @version.id }
           %div.clear
           %p
-            %button.float_right{type:"submit",name:"bookmark[submit]",value:"submit"}= t('bookmarks.save')
+            %button{type:"submit",name:"bookmark[submit]",value:"submit"}= t('bookmarks.save')
           %div.clear{style:"padding: 0 0 15px 0"}
 
     %dt.share
@@ -70,20 +70,17 @@
               = t("link will be added")
             %input{type: "hidden", id: "share_link", name: "share[link]", value: ""}
 
-            %div.clearfix{style: "margin-bottom: 8px"}
-            %div.share_action
-              %button.float_right{type:"submit",name:"share[submit]",value:"submit"}= t('ref.share now')
             %div.share_services
-
-              %span.float_left{style: "width: 60%"}
+              %span
                 %input#checkbox_share_twitter{type:"checkbox",name:"share[connections][twitter]"}
                 %label.share_verse_twitter{for: 'share_verse_twitter', value: "Twitter"} = t("twitter")
 
-              %span.float_left{style: "width: 60%"}
+              %span
                 %input#checkbox_share_facebook{type:"checkbox", name: "share[connections][facebook]"}
                 %label.share_verse_facebook{for: 'share_verse_facebook'}= t("Facebook")
 
-            %div.clearfix{style: "margin-bottom: 15px"}
+            %div.share_action
+              %button{type:"submit",name:"share[submit]",value:"submit"}= t('ref.share now')
 
     %dt.link
       = t("link")
