--- a/app/assets/stylesheets/_dynamic_menus.sass
+++ b/app/assets/stylesheets/_dynamic_menus.sass
@@ -336,8 +336,8 @@
 #menu_verse_actions .references .reference_tokens > li
   margin-top: 7px
 
-  a
-    border-radius: 4px
+#menu_verse_actions .references .reference_tokens > li a
+  border-radius: 4px
 
 #menu_verse_actions .references ul
   margin: 0
@@ -414,6 +414,13 @@
   border: 1px solid #cbc9cf
   border-top: none
   padding: 10px 20px
+
+#menu_verse_actions #note-pane .title
+  float: left
+  margin-right: 25px
+
+#menu_verse_actions #note-pane .save
+  margin-top: 10px
 
 .dynamic_menu.version_select
   width: 415px
